# Mixify

./: LICENSE  docker-compose.yml
.github/workflows/: build.yml
client/: .env.example  .graphqlrc  drizzle.config.ts  package.json  pnpm-lock.yaml
client/gql/: codegen.config.ts  post.codegen.ts
client/src/: App.tsx  index.tsx
client/src/app/Components/: CurrentSelectedPlaylistInfoPanel.tsx  PlaylistCard.style.css  PlaylistCard.tsx  PlaylistGraphOverview.style.css  PlaylistGraphOverview.tsx  PlaylistsConfigurationPanel.tsx
client/src/app/pages/: DashboardPage.tsx  EmailConfirmationPage.tsx  LandingPage.tsx  NotFoundPage.tsx  PlaylistBuilderPage.tsx
client/src/graphql/schemas/: ConfirmConfirmationCodeQuery.graphql  PlaylistConfiguratiuonQuery.graphql  RequestAcessTokenQuery.graphql  RequestUserConfirmationCodeQuery.graphql
client/src/pages/: _app.tsx  app.tsx
client/src/server/db/: schema.ts
client/src/types/: types.ts
client/src/utils/gql/: queries.ts  query-converter.ts
client/src/utils/html/: dangerous-html-helpers.ts
server/: .env  .gitignore  Makefile  go.mod  go.sum  gqlgen.yml
server/api/graphql/: resolver.go  schema.graphql  schema.resolvers.go
server/api/graphql/model/: models_gen.go
server/api/schema/: schema.resolvers.go
server/api/server/: server.go
server/cmd/app/: server.go
server/cmd/debug/: create_mixstack.go
server/db/: db.go
server/internal/models/: app_models.go  db_models.go
server/internal/untils/mixify/: build_graph.go
server/internal/utils/common/: common.go
server/internal/utils/mixify/: build_graph.go  create_playlists.go  pretty_print.go  sync_playlists.go
server/tools/: tools.go
src/: .example.env  .gitignore  Cargo.toml  Taskfile.yml  build.rs  flow.md  input.gv
src/proto/: service.proto
src/src/: apply_command.rs  args.rs  constants.rs  logger.rs  main.rs  new_command.rs  plan_command.rs  rpc.rs  server.rs  traits.rs  types.rs
(+13 files in other folders)
