[package]
name = "mixify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
graphviz-dot-parser = "0.0.3"
rspotify = {version = "0.11.7", features = ["env-file", "cli"]}

[dev-dependencies]
tokio = "1.28.1"
