[package]
name = "mixify"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mixify"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
graphviz-dot-parser = "0.0.3"
petgraph = "0.5.1"
rspotify = {version = "0.11.7", features = ["client-reqwest", "reqwest-native-tls", "env-file", "cli"]}
tokio = { version = "1.31.0", features = ["full"] }
env_logger = { version = "0.9.0", default-features = false }
url = "2.4.0"
log = "0.4.20"
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
async-stream = "0.3.5"
futures-util = "0.3.29"
prost = "0.12.3"
tonic = "0.10.2"
tonic-build = "0.10.2"
tonic-reflection = "0.10.2"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.10.2"
